[gd_scene load_steps=14 format=2]

[ext_resource path="res://Characters/main_character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Main.gd" type="Script" id=2]
[ext_resource path="res://Scene/PATHS/S_Path.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/ParallaxLayer.gd" type="Script" id=4]
[ext_resource path="res://Scene/PATHS/u_path.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/PATHS/O_Path.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/PATHS/8_Path.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/WaveUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/PATHS/l_path.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/nuke_spritesheet.png" type="Texture" id=10]
[ext_resource path="res://assets/bgs/Stars.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/nuke:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/nuke:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "nuke"
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/nuke:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/nuke:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Wave1" type="Node2D"]
script = ExtResource( 2 )

[node name="raptor" parent="." instance=ExtResource( 1 )]
position = Vector2( 454, 573 )

[node name="u_path" parent="." instance=ExtResource( 5 )]
visible = false

[node name="first_wave" type="Timer" parent="."]
autostart = true

[node name="path_movement" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="second_wave" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="8_Path" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( -36, -242 )
scale = Vector2( 0.913183, 1 )

[node name="S_Path" parent="." instance=ExtResource( 3 )]
visible = true
position = Vector2( -1501, -392 )

[node name="O_Path" parent="." instance=ExtResource( 6 )]
visible = true
position = Vector2( -240, 337 )
scale = Vector2( 1, 1 )

[node name="wave_ui" parent="." instance=ExtResource( 8 )]

[node name="l_path" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( -18, -153 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/nuke = SubResource( 2 )

[node name="nuke" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 638, 477 )
texture = ExtResource( 10 )
hframes = 3

[node name="con_pos_1" type="Position2D" parent="."]
position = Vector2( 259, 159 )

[node name="con_pos_2" type="Position2D" parent="."]
position = Vector2( 744, 197 )

[node name="third_wave" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="third_wave_fire_rate" type="Timer" parent="."]
wait_time = 2.0

[node name="container_2_timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="health_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="health_spawn" type="Position2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 960 )
script = ExtResource( 4 )
star_speed = -5.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 642, 476 )
texture = ExtResource( 11 )

[connection signal="timeout" from="first_wave" to="." method="_on_first_wave_timeout"]
[connection signal="timeout" from="path_movement" to="." method="_on_path_movement_timeout"]
[connection signal="timeout" from="second_wave" to="." method="_on_second_wave_timeout"]
[connection signal="timeout" from="third_wave" to="." method="_on_third_wave_timeout"]
[connection signal="timeout" from="third_wave_fire_rate" to="." method="_on_third_wave_fire_rate_timeout"]
[connection signal="timeout" from="container_2_timer" to="." method="_on_container_2_timer_timeout"]
[connection signal="timeout" from="health_timer" to="." method="_on_health_timer_timeout"]
